# LauncherGenerator

./: .gitignore  .nuke  MCApi.sln  session.json
.github/workflows/: build.yml  dotnet.yml  linux.yml
LauncherGenerator/: BuildLogic.cs  Config.cs  FabricTransformer.cs  GCLogic.cs  GlobalUsings.cs  ITargetTransformer.cs  LauncherGenerator.csproj  LocalVersionResolver.cs  Log.cs  Program.cs  ProgramTasks.cs  QuiltTransformer.cs
LauncherGenerator/Utils/: Resources.cs
MCApi/: Assets.cs  CombinedVersionResolver.cs  CommandLineArgumentBuilder.cs  DataContracts.cs  EnumerableFixer.cs  GameArguments.cs  GlobalUsings.cs  GuidUtility.cs  IVersionResolver.cs  LinqExtensions.cs  MCApi.csproj  MCApiException.cs  MCDownload.cs  MCDownloadException.cs  MCHttpHelper.cs  MCLibrary.cs  MCLogin.cs  MCLoginException.cs  MavenCoords.cs  RemoteFile.cs  RemoteVersionResolver.cs  StringExtensions.cs  VariableResourceManager.cs  VersionManifest.cs
MCApi/Fabric/: DataContracts.cs  FabricMeta.cs  QuiltMeta.cs
MCApi/Utils/: CommonJsonOptions.cs  StringExtensions.cs  SystemInfo.cs
MCAuthHelper/: Cargo.toml  build.gradle.kts  settings.gradle.kts
MCAuthHelper/src/: main.rs
MCLaunch/: BuildLogic.cs  Config.cs  FabricTransformer.cs  GCLogic.cs  ITargetTransformer.cs  LocalVersionResolver.cs  Log.cs  MCLaunch.csproj  Program.cs  ProgramTasks.cs
MCLaunchAuthHelper/: Cargo.toml
MCLaunchAuthHelper/src/: main.rs  yggdrasil.rs
sources/: MCApi.sln
sources/LauncherGenerator/: BuildLogic.cs  GCLogic.cs  ITargetTransformer.cs  LauncherGenerator.csproj  mc-example.ini
(+20 files in other folders)
