[package]
name = "mclaunch-authhelper"
version = "0.1.0"
authors = ["Nikolay Kochulin <porez0xfeedface@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.57"
serde = {version = "1.0.115", features = ["derive"]}
uuid = {version = "0.8.1", features = ["serde"]}
thiserror = "1.0.20"
rpassword = "5.0.0"
anyhow = "1.0.32"
attohttpc = {version = "0.15.0", features = ["json"]}
sha1 = "0.6.0"

[profile.release]
lto = "thin"

[target.'cfg(unix)'.dependencies]
exec = "0.3.1"